fix styling for iPad
currently this site is being displayed on a 2nd generation iPad, whose screen is W: 768, H: 1024. The logos are too far down the page so that, when we're scrolled to the top of the page, only half of the logo is visible, which looks...bad. here is a CSS fix for that. this moves the logos up a bit ONLY for screens whose width is exactly 768 pixels.

--- a/static/style.css
+++ b/static/style.css
@@ -23,6 +23,13 @@ footer {
         margin-bottom: 1%;
     }
 
+/* for TL iPad */
+@media screen and (device-width:768px) {
+    footer {
+        margin-top: 2%;
+    }
+}
+
 .dot-elastic {
     position: relative;
     width: 10px;
